[tool.poetry]
name = "sphinx-scylladb-theme"
version = "1.1.1"
description = "A Sphinx Theme for ScyllaDB documentation projects"
authors = ["David García <hi@davidgarcia.dev>"]
exclude = [".github", "config", "docs", ".postcss.config.js", ".prettierrc.json", "deploy.sh", "src", "package.json", "package-lock.json"]
readme = "PYPI.rst"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"
sphinx-copybutton = "^0.2.8"
Sphinx = "^2.4.4"
sphinx-multiversion-scylla = "^0.2.4"
sphinx-notfound-page = "^0.6"
recommonmark = "0.5.0"
beautifulsoup4 = "^4.9.3"
sphinx-tabs = "^3.1.0"
sphinxcontrib-youtube = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.17.0"
recommonmark = "^0.7.1"
sphinx-multiversion-scylla = "^0.2.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
